# data-engineering-handson-gc

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
01_profiling/: README.md
01_profiling/notebooks/: profiling.ipynb
01_profiling/scripts/: split_data.py  upload_to_gcs.py
02_cleaning/: README.md
02_cleaning/cloud_run_function/: main.py  requirements.txt
02_cleaning/scripts/: batch_clean_and_load.sh
02_cleaning/sql/: schema.sql
03_mart/: README.md
03_mart/sql/: daily_summary.sql  weekday_pattern.sql
data/: README.md
